# box-ai-agents-toolkit

./: CHANGELOG.md  README.md  pyproject.toml
.github/scripts/: generate_changelog.sh  update_version.py
.github/workflows/: pypi-release.yml
docs/: box_api_ai.md  box_api_file.md
src/box_ai_agents_toolkit/: __init__.py  box_api_ai.py  box_api_collaborations.py  box_api_docgen.py  box_api_docgen_template.py  box_api_file.py  box_api_file_representation.py  box_api_file_transfer.py  box_api_folder.py  box_api_groups.py  box_api_hubs.py  box_api_metadata_template.py  box_api_shared_links.py  box_api_tasks.py  box_api_users.py  box_api_util_classes.py  box_api_util_generic.py  box_api_weblink.py
tests/: conftest.py  test_box_api_ai.py  test_box_api_ai_ask.py  test_box_api_collaborations.py  test_box_api_doc_gen.py  test_box_api_docgen_ops.py  test_box_api_docgen_template.py  test_box_api_docgen_template_ops.py  test_box_api_file.py  test_box_api_file_ops.py  test_box_api_file_representation.py  test_box_api_file_transfer.py  test_box_api_files.py  test_box_api_folder.py  test_box_api_hubs.py  test_box_api_metadata_template.py  test_box_api_metadata_template_ops.py  test_box_api_shared_links.py  test_box_api_tasks.py  test_box_api_users.py  test_box_api_weblink.py  test_doc_gen.py
tests/test_data/DocGen/: dg_template_lease.docx
