[project]
name = "box-ai-agents-toolkit"
version = "0.0.2"
description = "A python library for building AI agents for Box"
license = "MIT"
readme = "README.md"
authors = [{ name = "Box Developer Relations", email = "devrel@box.com" }]
maintainers = [{ name = "Box Developer Relations", email = "devrel@box.com" }]
keywords = [
    "box",
    "box.com",
    "ai",
    "agent",
    "toolkit",
    "library",
    "box ai",
    "box api",
    "box ai api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]


requires-python = ">=3.11"
dependencies = ["box-sdk-gen>=1.12.0", "python-dotenv>=1.0.1"]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/box-community/box-ai-agents-toolkit.git"
Issues = "https://github.com/box-community/box-ai-agents-toolkit/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.9.10"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
